Fix security errors on JDK17
JDK17 locked down some of the reflection voodoo the test suite wants to
do. We have to add --add-opens to unlock java.base/java.lang and
java.util.